--- a/README.Rmd
+++ b/README.Rmd
@@ -32,37 +32,49 @@ The dataset is about innovation dynamics in the pharmaceutical industry in China
 
 ## Functionality
 
+
 ### Description of the dataset variables
 
-```{r,echo=FALSE, eval = TRUE, out.width = '100%'}
-knitr::include_graphics("./man/figures/variable_names.png")
-```
+| Variable name | Description |
+|:-:|:-:|
+| name_i | Corresponds to class_i + year_i containing all patents of this group and year in the dataset |
+| class_i | Manual code section for patent group i |
+| year_i | Year of patent filing |
+| vol_i | Number of patents in the group (name_i) |
+| name_j | Corresponds to class_j + year_j containing all patents of this group and year in the dataset |
+| class_j | Manual code section for patent group j |
+| year_j | Year of patent filing for group j |
+| vol_j | Number of patents in the group (name_j) |
+| year_diff | The difference in years between year_i and year_j of patent filing |
+| vol_diff | Difference in the amount of patents filed in each class for a respective year (difference vol_i and vol_j) |
+| Jaccard_Similarity | Similarity between patent class i and patent class j and their respective years |
+
+
 
 ### Description of the top 20 manual code sections (1990-2017)
 
-| b14n | Pharmaceutical activities | Organs |
+| Manual code sections | Category | Sub-category |
 |:-:|:-:|:-:|
-| d05h | Fermentation industry | Microbiology, laboratory procedures |
-| b04a | Natural products (or genetically engineered), polymers | Alkaloids, plant extracts |
-| b14s | Pharmaceutical activities | Miscellaneous activity terms |
-| b14f | Pharmaceutical activities | Drugs acting on the blood and cardiovascular system |
-| b04c | Natural products (or genetically engineered), polymers | Polymers |
-| b14c | Pharmaceutical activities | Anaesthetics and drugs relieving fever, inflammation and pain |
-| b04e | Natural products (or genetically engineered), polymers | Nucleic acids |
-| b12m | Diagnostics and formulation types | Formulations type |
-| b14j | Pharmaceutical activities | Drugs acting on the muscular and nervous systems |
-| b14h | Pharmaceutical activities | Cancer related drugs |
-| b11c | Process, apparatus | General process, apparatus |
-| b14a | Pharmaceutical activities | Antimicobials |
-| b14e | Pharmaceutical activities | Drugs acting on the gastrointestinal system |
-| b10a | Aromatics and cycloaliphatics (mono and bicyclic only), aliphatics | Rarer chemical groups general |
-| b14g | Pharmaceutical activities | Drugs acting on the immune system |
-| b14d | Pharmaceutical activities | Hormonal, antihormonal, enzyme inhibitors |
-| a12v | Polymer applications | Medical, dental, cosmetics and veterinary |
-| b07d | Heterocyclics, mononuclear | Sole hetero(s) nitrogen |
-| b06d | Heterocyclic fused ring | Sole hetero(s) nitrogen |
-
-
+| B14-N | Pharmaceutical activities | Organs |
+| D05-H | Fermentation industry | Microbiology, laboratory procedures |
+| B04-A | Natural products (or genetically engineered), polymers | Alkaloids, plant extracts |
+| B14-S | Pharmaceutical activities | Miscellaneous activity terms |
+| B14-F | Pharmaceutical activities | Drugs acting on the blood and cardiovascular system |
+| B04-C | Natural products (or genetically engineered), polymers | Polymers |
+| B14-C | Pharmaceutical activities | Anaesthetics and drugs relieving fever, inflammation and pain |
+| B04-E | Natural products (or genetically engineered), polymers | Nucleic acids |
+| B12-M | Diagnostics and formulation types | Formulations type |
+| B14-J | Pharmaceutical activities | Drugs acting on the muscular and nervous systems |
+| B14-H | Pharmaceutical activities | Cancer related drugs |
+| B11-C | Process, apparatus | General process, apparatus |
+| B14-A | Pharmaceutical activities | Antimicobials |
+| B14-E | Pharmaceutical activities | Drugs acting on the gastrointestinal system |
+| B10-A | Aromatics and cycloaliphatics (mono and bicyclic only), aliphatics | Rarer chemical groups general |
+| B14-G | Pharmaceutical activities | Drugs acting on the immune system |
+| B14-D | Pharmaceutical activities | Hormonal, antihormonal, enzyme inhibitors |
+| A12-V | Polymer applications | Medical, dental, cosmetics and veterinary |
+| B07-D | Heterocyclics, mononuclear | Sole hetero(s) nitrogen |
+| B06-D | Heterocyclic fused ring | Sole hetero(s) nitrogen |
 
 
 ## Installation
@@ -73,6 +85,10 @@ You can install ipcR from [GitHub](https://github.com/) with:
 # install.packages("devtools")
 devtools::install_github("warint/innovation_pharma_china")
 ```
+
+You can also download the date [here](https://warin.ca/datalake/innovation_pharma_china/innovation_pharma_china.csv)
+
+
 ## How-To
 
 ### Step 1: Getting the data
@@ -88,13 +104,20 @@ myData <- ipcr_data()
 
 ### Step 2: Creating visuals
 
-The ipcr_visual() function allows you to create four types of visual : line, point, box and point charts.
+The ipcr_visual() function allows you to create three types of visual : line, point and box charts.
 
 ```{r}
 ipcr_visual(chart = "line_1")
 ```
 
-```{r,eval=FALSE,echo=FALSE}
-ipcr_visual(chart = "box_3",class = "a12v")
+```{r}
+ipcr_visual(chart = "line_2",class = "a12v")
 ```
 
+## Cite
+
+Warin, Thierry, and C. Vorreuther. 2020. "Patent Relatedness and Velocity in the Chinese Pharmaceutical Industry: A Dataset of Jaccard Similarity Indices",forthcoming.
+
+### Acknowledgments
+
+The author would like to thank the Center for Interuniversity Research and Analysis of Organizations (CIRANO, Montreal) and the Professorship in Data Science for International Business (HEC Montréal, Canada) for their support, as well as Thibault Senegas, Marine Leroi and Martin Paquette. The usual caveats apply
