--- a/README.Rmd
+++ b/README.Rmd
@@ -79,14 +79,14 @@ The dataset is about innovation dynamics in the pharmaceutical industry in China
 
 ## Installation
 
-You can install ipcR from [GitHub](https://github.com/) with:
+Option 1. You can install ipcR from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("warint/innovation_pharma_china")
 ```
 
-You can also download the date [here](https://warin.ca/datalake/innovation_pharma_china/innovation_pharma_china.csv)
+Option 2. You can also download the data [here](https://warin.ca/datalake/innovation_pharma_china/innovation_pharma_china.csv)
 
 
 ## How-To
