--- a/README.Rmd
+++ b/README.Rmd
@@ -32,6 +32,7 @@ The dataset is about innovation dynamics in the pharmaceutical industry in China
 
 ## Functionality
 
+werwrew
 
 ### Description of the dataset variables
 
